Screen size issues
Fixed issue where background was overflowing horizontally but not displaying vertically the full height of the content

--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -6,10 +6,17 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
   background-image: linear-gradient(144deg,#66ecc4, #c5b1e9 50%,#e7a2f5);
   background-size: cover;
   background-repeat: no-repeat;
-  justify-content: center;
+  overflow-x: hidden;
+}
+
+body {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -81,14 +88,6 @@ p {
   background: none;
 }
 
-@media (min-width: 768px) {
-  .btn {
-    font-size: 24px;
-    max-width: 100%;
-    width: 100%;
-  }
-}
-
 .reset-btn{
   align-items: center;
   background-image: linear-gradient(144deg,#ff4090, #f3b542 50%,#ebe700);
@@ -127,17 +126,15 @@ p {
   transition: 300ms;
 }
 
+#reset-container {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  width: 100%;
+}
 
 .reset-btn:hover span {
   background: none;
-}
-
-@media (min-width: 500px) {
-  .reset-btn {
-    font-size: 24px;
-    max-width: 100%;
-    width: 100%;
-  }
 }
 
 #total {
@@ -162,6 +159,18 @@ p {
 
 .total-container {
   padding: 10px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+/*Media queries*/
+@media (min-width: 768px) {
+  .btn {
+    font-size: 24px;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 @media (max-width: 500px) {
@@ -180,9 +189,7 @@ p {
 }
 
 @media (min-width:767px) {
-    .reset-container, .total-container{
-        display: flex;
-        justify-content: center;
+    .total-container{
         max-width: 50%;
     }
 }
